добавил стили при открытии модалки с темной темой

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -24,9 +24,9 @@
   #video-title-dt {
     color: #fff;
   }
-  
-  .modal {
-    background-color: #000;
+  #btn-dark-theme {
+    border-color: #fff;  
+    color: #fff
   }
 }
 
