--- a/src/sass/components/_modal-content.scss
+++ b/src/sass/components/_modal-content.scss
@@ -10,6 +10,11 @@ div.modal {
     overflow: hidden;
 }
 
+div.modal.dark-theme {
+    background-color: rgb(31, 31, 31);
+    color: #fff;
+}
+
 .modal-card__list {
     margin-top: 20px;
 }
