--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -23,6 +23,16 @@
   }
 }
 
+div.modal.dark-theme .modal__close-btn {
+  background-image: url(../images/icons/close-dark-theme.svg);
+  &:hover,
+  &:focus {
+    // border: 1px solid var(--background-accent);
+    transform: scale(1.1);
+    background-image: url(../images/icons/close-hover.svg);
+  }
+}
+
 .modal__close-btn {
   display: inline-flex;
   position: absolute;
@@ -51,4 +61,6 @@
 }
   .basicLightbox {
     overflow: scroll;
+    color: inherit;
+    background-color: inherit;
 }
