--- a/src/templates/modalTpl.hbs
+++ b/src/templates/modalTpl.hbs
@@ -1,4 +1,4 @@
-<button type='button' class='modal__close-btn'></button>
+<button id="video-title-dt" type='button' class='modal__close-btn'></button>
 {{#if poster_path}}
 <img
   class='modal-card__img'
@@ -16,7 +16,7 @@
   onerror="loader.onCardLoaded()"/>
 {{/if}}
 <div class='modal-card__wrapper'>
-    <h2 class='modal-card__title'>{{title}}</h2>
+    <h2 id="video-title-dt" class='modal-card__title'>{{title}}</h2>
     <div class="modal-card__stats-wrapper">
       <div class="modal-card__stats-wrapper1">
         <ul class='modal-card__list'>
@@ -30,25 +30,25 @@
       </div>
       <div class="modal-card__stats-wrapper2">
         <ul class='modal-card__list'>
-        <li class='modal-card__data'>
+        <li id="video-title-dt" class='modal-card__data'>
           <span class="modal-card__data--vote">{{vote_average}}</span><span class='modal-card__item'> / </span><span  class="modal-card__data--vote modal-card__data--vote-count">{{vote_count}}</span>
           </li>
-        <li class='modal-card__data'>{{popularity}}</li>
-        <li class='modal-card__data'>{{original_title}}</li>
+        <li id="video-title-dt" class='modal-card__data'>{{popularity}}</li>
+        <li id="video-title-dt" class='modal-card__data'>{{original_title}}</li>
         {{#if genres}}
         <li class='modal-card__item'>
           <p class="movie-genre__text">{{#each genres}}
-            <span class="cardItem__genre-data">{{this.name}}</span>
+            <span id="video-title-dt" class="cardItem__genre-data">{{this.name}}</span>
                {{/each}}</p>
         </li>
         {{/if}}  
       </ul>
       </div>
     </div>
-    <p class="modal-card__description-title">ABOUT</p>
-    <p class='modal-card__description'>{{overview}}</p>
+    <p id="video-title-dt" class="modal-card__description-title">ABOUT</p>
+    <p id="video-title-dt" class='modal-card__description'>{{overview}}</p>
     <div class='modal-card__btn'>
-      <button type='button' class='button-white button-white--modal watchedBtn-js'>add to Watched</button>
-      <button type='button' class='button-white button-white--modal queueBtn-js'>add to queue</button>
+      <button type='button' id="btn-dark-theme" class='button-white button-white--modal watchedBtn-js'>add to Watched</button>
+      <button type='button' id="btn-dark-theme" class='button-white button-white--modal queueBtn-js'>add to queue</button>
     </div>
 </div>
