--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -2,11 +2,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    @media screen and (max-width: 767px){
+        padding-bottom: 40px;
+        }
+    padding-top: 0px;
+    padding-bottom: 50px;
 }
 .pagination_list{
     display: flex;
 }
-
 
 .pagination_list li{
     margin-left: 1px;
@@ -51,3 +55,8 @@
     border-radius: 5px;
 }
 
+.dots{
+    @media screen and (max-width: 767px){
+    display: none;
+    }
+}
