--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -16,7 +16,7 @@
       box-shadow: 0px 1px 1px rgba(252, 252, 252, 0.12), 0px 4px 4px rgba(252, 250, 250, 0.06),
         1px 4px 6px rgba(255, 255, 255, 0.16);
       cursor: pointer;
-      transform: scale(1.1);
+      transform: scale(1.025);
       border-radius: 2px;
     }
   }
@@ -25,8 +25,8 @@
     color: #fff;
   }
   #btn-dark-theme {
-    border-color: #fff;  
-    color: #fff
+    border-color: #fff;
+    color: #fff;
   }
 }
 
