--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -37,7 +37,7 @@
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
       1px 4px 6px rgba(0, 0, 0, 0.16);
     cursor: pointer;
-    transform: scale(1.1);
+    transform: scale(1.025);
     border-radius: 2px;
   }
 }
@@ -59,6 +59,7 @@
 
 .video-title {
   padding-top: 10px;
+  padding-left: 5px;
   text-transform: uppercase;
   @include Roboto(12, 14, 500);
 }
@@ -69,6 +70,10 @@
   color: var(--text-color-accent);
   @include Roboto(12, 14, 500);
   line-height: 1.33;
+}
+
+.video__text {
+  padding-left: 5px;
 }
 
 .video__vote {
