--- a/src/templates/gallery.hbs
+++ b/src/templates/gallery.hbs
@@ -20,7 +20,7 @@
       <span class='video-rating'></span>
     </div>
     <h2 class='video-title' id='video-title-dt'>{{original_title}} </h2>
-    <div>
+    <div class='video__text'>
       {{#if genres}}
       <span class='video__details'>{{genres}} | {{release_date}}</span>
       <span class='video__vote'>{{vote_average}}</span>
