add slider init

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,3 +1,1 @@
-<div class="container holo-carousel">
-  <ul class="splide__list holo-container"></ul>
-</div>
+<div class="slider container"></div>
