fixes team-modal and footer styles

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -59,8 +59,11 @@ div.modal.dark-theme .modal__close-btn {
     background-image: url(../images/icons/close-hover.svg);
   }
 }
-  .basicLightbox {
-    overflow: scroll;
-    color: inherit;
-    background-color: inherit;
-}
+
+// Если нужна доп. стилизация где-то - добавляем доп. класс,
+// класс .basicLightbox - базовый для всех модальных окон
+//   .basicLightbox {
+//     overflow: scroll;
+//     color: inherit;
+//     background-color: inherit;
+// }
