--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -8,6 +8,10 @@
   background-color: #f7f7f7;
 }
 
+.dark-theme .footer {
+  background-color: #1f1f1f;
+}
+
 .footer__container {
   text-align: center;
   width: 236px;
@@ -17,6 +21,10 @@
   line-height: 1.17;
 
   color: #545454;
+}
+
+.dark-theme .footer__container {
+  color: var(--main-white-color);
 }
 
 .copyright__second-line {
