--- a/src/templates/team-modal.hbs
+++ b/src/templates/team-modal.hbs
@@ -1,11 +1,14 @@
-<div class="team-modal">
-    <ul class="team-card-list">
+<div class="team__modal">
+    <ul class="team__cards">
         {{#each this}}
-        <li class="team-card-list-item">
-            <img src="{{foto}}" alt="Foto{{name}}" class="team-card-list-img">
-            <h2 class="team-name">{{name}}</h2>
-            <p class="team-discription">{{role}}</p>
-            <a class="team-contact link" href="mailto:{{mail}}">{{mail}}</a>
+        <li class="team__item">
+            <a class="team__thumb" target="_blank" href="{{git}}">
+                <img src="{{foto}}" alt="Foto{{name}}" class="team__img">
+                <span class="team__git" ></span>
+            </a>
+            <h2 class="team__name">{{name}}</h2>
+            <p class="team__description">{{role}}</p>
+            <a class="team__contact link" href="mailto:{{mail}}">{{mail}}</a>
         </li>
     {{/each}}
     </ul>
