--- a/src/sass/layout/_team-modal.scss
+++ b/src/sass/layout/_team-modal.scss
@@ -1,9 +1,36 @@
-.team-modal {
-  width: 900px;
-  height: 600px;
+.team__modal {
+  width: 220px;
+
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 650px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 900px;
+  }
 }
 
-.team-card-list {
+.team__placeholder {
+  height: 95vh;
+
+  @media screen and (min-width: 768px) {
+    height: 80vh;
+  }
+
+  @media screen and (min-width: 1200px) {
+    height: 600px;
+  }
+
+  @media screen and (max-width: 1200px) {
+    overflow: auto;
+  }
+}
+
+.team__cards {
   width: 100%;
   height: 100%;
   flex-wrap: wrap;
@@ -14,26 +41,62 @@
   margin-top: -30px;
 }
 
-.team-card-list-item {
+.team__item {
   text-align: center;
-  flex-basis: calc(100% / 4 - 30px);
+  flex-basis: calc(100% / 1 - 30px);
   margin-left: 30px;
   margin-top: 30px;
+
+  @media screen and (min-width: 480px) {
+    flex-basis: calc(100% / 2 - 30px);
+  }
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 3 - 30px);
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 4 - 30px);
+  }
 }
 
-.team-card-list-img {
+.team__img {
+  width: 195px;
   border-radius: 50%;
+  background-color: rgb(233, 233, 233);
 }
 
-.team-discription,
-.team-contact {
+.team__description {
+  margin-bottom: 5px;
   color: var(--main-white-color);
 }
 
-.team-contact {
+.team__contact {
   font-size: 12px;
+  color: var(--main-white-color);
 }
 
-.team-name {
+.team__name {
   color: var(--background-accent);
+}
+
+.team__thumb {
+  display: block;
+  position: relative;
+  margin-bottom: 15px;
+
+  &:hover .team__git {
+    transform: scale(1.2);
+  }
+}
+
+.team__git {
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+  width: 25px;
+  height: 30px;
+  background-image: url(../../src/images/icons/git.png);
+  background-size: cover;
+  transition: transform 250ms linear;
 }
