--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -39,12 +39,12 @@
   background-color: #ff6b01;
   border: 1px solid #ff6b01;
 
-  &:hover,
-  &:focus &:active {
-    background-color: #ff6b01;
-    border: 1px solid #ff6b01;
-    color: #fff;
-  }
+  // &:hover,
+  // &:focus &:active {
+  //   background-color: #ff6b01;
+  //   border: 1px solid #ff6b01;
+  //   color: #fff;
+  // }
 }
 
 .button-white {
