--- a/src/sass/components/_modal-content.scss
+++ b/src/sass/components/_modal-content.scss
@@ -74,16 +74,6 @@ div.modal.dark-theme {
     
 }
 
-// .button-white--modal {
-//     border: 1px solid #000000;
-//     color: var(--main-black-color);
-
-//     &:hover,
-//     &:focus  {
-//         color: var(--main-white-color);
-//     }
-// }
-
 .modal-card__data--vote {
     @include Roboto ($lh:16, $fs:12, $fw:500);
     display: inline-block;
@@ -122,7 +112,8 @@ div.modal.dark-theme {
 }
 
 .modal-card__wrapper .button-white:hover,
-.modal-card__wrapper .button-white:focus  {
+.modal-card__wrapper .button-white:focus,
+.modal-card__wrapper .button-white:active {
         color: var(--main-white-color);
         border: 1px solid #ff6b01;
     }
@@ -136,8 +127,7 @@ div.modal.dark-theme {
     margin-left: 15px;
 }
 
-.modal-card__wrapper .button-orange:hover,
-.modal-card__wrapper .button-orange:focus  {
+.modal-card__wrapper .button-orange:hover {
         color: #000000;
         border: 1px solid #000000;
         background-color: transparent;
