--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -53,12 +53,12 @@
   background-color: transparent;
   border: 1px solid var(--main-white-color);
 
-  &:hover,
-  &:focus,
-  &:active {
-    background-color: var(--background-accent);
-    border: 1px solid var(--background-accent);
-  }
+  // &:hover,
+  // &:focus,
+  // &:active {
+  //   background-color: var(--background-accent);
+  //   border: 1px solid var(--background-accent);
+  // }
 }
 
 .button-active {
