--- a/src/sass/components/_modal-content.scss
+++ b/src/sass/components/_modal-content.scss
@@ -111,12 +111,12 @@ div.modal.dark-theme {
     margin-left: 15px;
 }
 
-.modal-card__wrapper .button-white:hover,
-.modal-card__wrapper .button-white:focus,
-.modal-card__wrapper .button-white:active {
-        color: var(--main-white-color);
-        border: 1px solid #ff6b01;
-    }
+// .modal-card__wrapper .button-white:hover,
+// .modal-card__wrapper .button-white:focus,
+// .modal-card__wrapper .button-white:active {
+//         color: var(--main-white-color);
+//         border: 1px solid #ff6b01;
+//     }
 
 .modal-card__wrapper .button-orange {
     margin: 0;
@@ -127,11 +127,11 @@ div.modal.dark-theme {
     margin-left: 15px;
 }
 
-.modal-card__wrapper .button-orange:hover {
-        color: #000000;
-        border: 1px solid #000000;
-        background-color: transparent;
-    }
+// .modal-card__wrapper .button-orange:hover {
+//         color: #000000;
+//         border: 1px solid #000000;
+//         background-color: transparent;
+//     }
 
 @media screen and(max-width: 767px) {
     .modal-card__wrapper {
