--- a/src/templates/sliderTpl.hbs
+++ b/src/templates/sliderTpl.hbs
@@ -1,4 +1,4 @@
-{{#each this}}
+{{!-- {{#each this}}
   <div class='slider__item'>
     <a class='link' href='#'>
       <img
@@ -10,4 +10,4 @@
       />
     </a>
   </div>
-{{/each}}
+{{/each}} --}}
