--- a/src/slider.css
+++ b/src/slider.css
@@ -1,6 +1,13 @@
 .slider.container {
-  margin-top: 60px;
+  width: 650px;
   padding: 0;
+}
+
+.for-bg {
+  padding-top: 52px;
+  padding-bottom: 55px;
+  background-image: url('./images/filmstrip_PNG150.png');
+  background-size: contain;
 }
 
 .item__image {
@@ -53,7 +60,9 @@
 }
 /* Клонированный слайд */
 .slick-slide.slick-cloned {
-  opacity: 0;
+  /* position: absolute; */
+  width: 0 !important;
+  /* opacity: 0; */
 }
 
 /* Стрелка */
@@ -64,8 +73,8 @@
   display: inline-block;
   zoom: 1;
   opacity: 1;
-  width: 40px;
-  height: 40px;
+  width: 35px;
+  height: 36px;
   line-height: 40px;
   font-size: 50px;
   color: white;
@@ -82,9 +91,11 @@
 .slick-arrow.slick-prev {
   border-radius: 0 50% 50% 0;
 }
+
 .slick-prev {
   display: flex;
   align-items: flex-end;
+  justify-content: flex-start;
 }
 
 /* Стрелка вправо */
