остановил прокрутку боди при открытой модалке

--- a/src/sass/components/_modal-content.scss
+++ b/src/sass/components/_modal-content.scss
@@ -150,9 +150,26 @@ div.modal.dark-theme {
     div.modal {
         padding-top: 48px;
     }
+    [data-modal-btn] {
+        width: 113px;
+    }
+
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .button-white:not(:first-child) .modal-card__wrapper  {
+        margin-left: auto;
+    }
+
+    [data-modal-btn] {
+        width: 125px;
+    }
+
+    
 }
 
 @include for-tablet-portrait-up {
+    
     .modal-card__img {
         width: 264px;
         height: 374px;
@@ -174,11 +191,4 @@ div.modal.dark-theme {
         height: 478px;
     }
     
-    div.modal {
-        display: flex;
-        flex-direction: row;
-        padding-top: 50px;
-        padding-bottom:  40px;
-    
-    }
 }
