--- a/src/templates/modalTpl.hbs
+++ b/src/templates/modalTpl.hbs
@@ -54,7 +54,7 @@
   <p id='video-title-dt' class='modal-card__description-title'>ABOUT</p>
   <p id='video-title-dt' class='modal-card__description'>{{overview}}</p>
   <div class='modal-card__btn'>
-    <button type='button' id='btn-dark-theme' class='button-white watchedBtn-js'>add to Watched</button>
-    <button type='button' id='btn-dark-theme' class='button-white queueBtn-js'>add to queue</button>
+    <button type='button' data-modal-btn id='btn-dark-theme' class='button-white watchedBtn-js'>add to Watched</button>
+    <button type='button' data-modal-btn id='btn-dark-theme' class='button-white queueBtn-js'>add to queue</button>
   </div>
 </div>
