Update slider styles

--- a/src/slider.css
+++ b/src/slider.css
@@ -1,27 +1,22 @@
 .slider.container {
-  width: 650px;
+  width: 882px;
   padding: 0;
 }
 
-.for-bg {
-  padding-top: 52px;
-  padding-bottom: 55px;
-  background-image: url('./images/filmstrip_PNG150.png');
-  background-size: contain;
+.slider__item {
+  align-items: center;
 }
 
 .item__image {
-  height: 205px;
-  max-width: 185px;
-  margin-right: 10px;
-  border-radius: 8px;
-  border: 3px solid rgb(64, 64, 64);
+  border: 1px solid black;
+  max-width: 150px;
   overflow: hidden;
   position: relative;
-  background-color: #000000;
-}
-.slider__item {
-  align-items: center;
+  background-image: url('./images/filmstrip.png');
+  background-size: cover;
+  padding-top: 70px;
+  padding-bottom: 70px;
+  background-repeat: no-repeat;
 }
 
 .slider {
