finish modal markup

--- a/src/sass/components/_modal-content.scss
+++ b/src/sass/components/_modal-content.scss
@@ -71,7 +71,6 @@ div.modal.dark-theme {
 .cardItem__genre-data {
     @include Roboto ($lh:16, $fs:12, $fw:500);
     color: var(--main-black-color);
-    
 }
 
 // .button-white--modal {
@@ -107,11 +106,6 @@ div.modal.dark-theme {
     flex-direction: row;
 }
 
-.modal-card__stats-wrapper1 {
-    margin-right: 41px;
-    white-space: nowrap;
-}
-
 .modal-card__wrapper .button-white {
     margin: 0;
     border: 1px solid #000000;
@@ -141,7 +135,11 @@ div.modal.dark-theme {
         color: #000000;
         border: 1px solid #000000;
         background-color: transparent;
-    }
+}
+
+.modal-card__item--genre {
+    margin-right: 76px;
+}
 
 @media screen and(max-width: 767px) {
     .modal-card__wrapper {
@@ -153,6 +151,11 @@ div.modal.dark-theme {
     [data-modal-btn] {
         width: 113px;
     }
+    .modal-card__stats-wrapper1 {
+        margin-right: 41px;
+        white-space: nowrap;
+    }
+    
 
 }
 
@@ -164,7 +167,10 @@ div.modal.dark-theme {
     [data-modal-btn] {
         width: 125px;
     }
-
+    .modal-card__stats-wrapper1 {
+        margin-right: 40px;
+        white-space: nowrap;
+    }
     
 }
 
@@ -190,5 +196,15 @@ div.modal.dark-theme {
         width: 396px;
         height: 478px;
     }
+    .modal-card__item--genre {
+        margin-right: 120px;
+    }
     
 }
+.genre__wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+    margin-top: 10px;
+}
+
