--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -25,7 +25,7 @@ div.modal {
     width: 882px;
     height: 568px;
     padding-top: 50px;
-    padding-bottom:  40px;
+    padding-bottom: 40px;
   }
 }
 
@@ -67,12 +67,11 @@ div.modal.dark-theme .modal__close-btn {
 }
 .hidden {
   overflow: hidden;
-
+}
 // Если нужна доп. стилизация где-то - добавляем доп. класс,
 // класс .basicLightbox - базовый для всех модальных окон
-  .basicLightbox {
-    overflow: scroll;
-    color: inherit;
-    background-color: inherit;
+.basicLightbox {
+  overflow: scroll;
+  color: inherit;
+  background-color: inherit;
 }
-
