--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,4 +1,4 @@
-<div class="for-bg">
+<!-- <div class="for-bg">
   <div class="slider container">
     <div class="slider__item">
       <a class="link" href="#">
@@ -201,4 +201,65 @@
       </a>
     </div>
   </div>
+</div> -->
+<div class="for-bg">
+  <div class="container">
+    <ul class="slider">
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+      <li class="slider__item"></li>
+    </ul>
+  </div>
 </div>
+
+<!-- <div class="slider-wrapper">
+  <section class="container">
+    <div class="slider">
+      <div class="glide__track" data-glide-el="track">
+        <ul class="glide__slides js-slider-container">
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+          <li class="glide__slide"></li>
+        </ul>
+      </div>
+      <div class="glide__arrows" data-glide-el="controls">
+        <button class="glide__arrow glide__arrow--left" data-glide-dir="<">prev</button>
+        <button class="glide__arrow glide__arrow--right" data-glide-dir=">">next</button>
+      </div>
+    </div>
+  </section>
+</div> -->
