--- a/src/slider.css
+++ b/src/slider.css
@@ -1,13 +1,25 @@
 .slider.container {
-  width: 882px;
+  /* width: auto; */
+  margin-top: 60px;
   padding: 0;
 }
 
-.slider__item {
-  align-items: center;
+.slider {
+  position: relative;
 }
 
-.item__image {
+.glide__slides {
+  display: flex;
+  position: relative;
+}
+
+.glide__track {
+  margin: 0 auto;
+  max-width: 895px;
+  overflow: hidden;
+}
+
+.slider__image {
   border: 1px solid black;
   max-width: 150px;
   overflow: hidden;
@@ -19,101 +31,42 @@
   background-repeat: no-repeat;
 }
 
-.slider {
-  position: relative;
-}
-/* Слайдер */
-.slick-slider {
-}
-/* Слайдер запущен */
-.slick-slider.slick-initialized {
-}
-/* Слайдер с точками */
-.slick-slider.slick-dotted {
-}
-/* Ограничивающая оболочка */
-.slick-list {
-  overflow: hidden;
-}
-/* Лента слайдов */
-.slick-track {
-  display: flex;
-}
-
-/* Слайд */
-.slick-slide {
-  width: 150px !important;
-}
-/* Слайд активный (показывается) */
-.slick-slide.slick-active {
-}
-/* Слайд основной */
-.slick-slide.slick-current {
-}
-/* Слайд по центру */
-.slick-slide.slick-center {
-}
-/* Клонированный слайд */
-.slick-slide.slick-cloned {
-  /* position: absolute; */
-  width: 0 !important;
-  /* opacity: 0; */
-}
-
 /* Стрелка */
-.slick-arrow {
+.glide__arrow {
+  margin-top: -20px;
   position: absolute;
-  top: 40%;
+  top: 50%;
   z-index: 10;
   display: inline-block;
   zoom: 1;
   opacity: 1;
-  width: 35px;
-  height: 36px;
+  width: 40px;
+  height: 40px;
   line-height: 40px;
   font-size: 50px;
   color: white;
   background-color: #857c73;
 }
-.slick-arrow:hover {
+.glide__arrow:hover {
   color: #ff6b08;
 }
-.slick-arrow:focus {
+.glide__arrow:focus {
   color: #ff6b08;
 }
 
 /* Стрелка влево */
-.slick-arrow.slick-prev {
+.glide__arrow--left {
   border-radius: 0 50% 50% 0;
-}
-
-.slick-prev {
+  left: 64px;
   display: flex;
   align-items: flex-end;
-  justify-content: flex-start;
 }
 
 /* Стрелка вправо */
-.slick-arrow.slick-next {
-  right: 0;
+.glide__arrow--right {
+  right: 64px;
   border-radius: 50% 0 0 50%;
-}
-.slick-next {
   display: flex;
   align-items: end;
   justify-content: end;
-}
-/* Стрелка не активная */
-.slick-arrow.slick-disabled {
-}
-/* Точки (булиты) */
-.slick-dots {
-}
-.slick-dots li {
-}
-/* Активная точка */
-.slick-dots li.slick-active {
-}
-/* Элемент точки */
-.slick-dots li button {
 }
