adds trailer player

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,6 +24,7 @@
 @import './components/loader';
 @import './components/pagination';
 @import './components/delete';
+@import './components/player';
 
 // import from folder layout
 @import './layout/footer';
