--- a/src/templates/modalTpl.hbs
+++ b/src/templates/modalTpl.hbs
@@ -62,5 +62,6 @@
       to Watched</button>
     <button type='button' data-modal-btn id='btn-dark-theme' class='button-white queueBtn-js'>add to
       queue</button>
+      <button type='button' data-modal-btn data-id="{{id}}" id='btn-dark-theme' class='button-white video-js'>watch trailer</button>
   </div>
 </div>
