fix add to watched

--- a/src/templates/modalTpl.hbs
+++ b/src/templates/modalTpl.hbs
@@ -58,10 +58,15 @@
   <p id='video-title-dt' class='modal-card__description-title'>ABOUT</p>
   <p id='video-title-dt' class='modal-card__description'>{{overview}}</p>
   <div class='modal-card__btn'>
-    <button type='button' data-modal-btn id='btn-dark-theme' class='button-white watchedBtn-js'>add
-      to Watched</button>
-    <button type='button' data-modal-btn id='btn-dark-theme' class='button-white queueBtn-js'>add to
-      queue</button>
-      <button type='button' data-modal-btn data-id="{{id}}" id='btn-dark-theme' class='button-white video-js'>watch trailer</button>
+    <button
+      type='button'
+      data-id='{{id}}'
+      id='btn-dark-theme'
+      class='button-white watchedBtn-js'
+    >add to Watched</button>
+    <button type='button' data-id='{{id}}' id='btn-dark-theme' class='button-white queueBtn-js'>add
+      to queue</button>
+    <button type='button' data-id='{{id}}' id='btn-dark-theme' class='button-white video-js'>watch
+      trailer</button>
   </div>
 </div>
