--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -86,12 +86,12 @@
 .site-nav {
   display: flex;
   justify-content: flex-end;
-
+  align-items: center;
   @include Roboto(14, 12, 500);
   color: var(--main-white-color);
 }
 .site-nav__item {
-  &:first-child {
+  &:not(:last-child) {
     margin-right: 39px;
   }
 }
