--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -28,6 +28,7 @@
 @import './components/player';
 
 // import from folder layout
+@import './layout/body';
 @import './layout/footer';
 @import './layout/header';
 @import './layout/gallery';
