--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -14,6 +14,8 @@
 
 .item {
   position: relative;
+  box-shadow: 0px 1px 1px rgba(129, 129, 129, 0.1), 0px 2px 4px rgba(129, 129, 129, 0.1),
+    3px 0px 6px rgba(129, 129, 129, 0.1);
   @media screen and (max-width: 767px) {
     &:not(:last-child) {
       margin-bottom: 20px;
@@ -34,8 +36,8 @@
   transition: transform 250ms linear;
   &:hover,
   &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 2px 4px rgba(0, 0, 0, 0.06),
+      3px 0px 6px rgba(0, 0, 0, 0.16);
     cursor: pointer;
     transform: scale(1.025);
     border-radius: 2px;
@@ -62,6 +64,7 @@
   padding-left: 5px;
   text-transform: uppercase;
   @include Roboto(12, 14, 500);
+  line-height: inherit;
 }
 
 .video__details {
@@ -88,4 +91,14 @@
   height: 16px;
   background: var(--background-accent);
   border-radius: 5px;
+}
+
+#item-dt {
+  border: 5px solid #fff;
+  background-color: #fff;
+  border-radius: 4px;
+}
+
+.video__details {
+  padding-bottom: 5px;
 }
