fix add to queue&delete from lists

--- a/src/sass/components/_delete.scss
+++ b/src/sass/components/_delete.scss
@@ -10,17 +10,9 @@
   padding: 0;
   cursor: pointer;
   border-radius: 50%;
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  border: none;
   background-color: transparent;
-  background-image: url(../images/icons/close.svg);
   background-size: 10px;
   background-position: center;
   background-repeat: no-repeat;
-
-  &:hover,
-  &:focus {
-    border: 1px solid var(--background-accent);
-    transform: scale(1.1);
-    background-image: url(../images/icons/close-hover.svg);
-  }
 }
