fixed styles gallery, modal & other

--- a/src/sass/components/_modal-content.scss
+++ b/src/sass/components/_modal-content.scss
@@ -48,10 +48,14 @@ div.modal.dark-theme {
   margin-top: 10px;
 }
 
-.modal-card__wrapper .modal-card__btn {
+.modal-card__btn {
   margin-top: 20px;
   display: flex;
-  flex-direction: row;
+
+  flex-wrap: wrap;
+  @media screen and (max-width: 768px) {
+    justify-content: center;
+  }
 }
 
 .modal-card__data {
@@ -100,17 +104,22 @@ div.modal.dark-theme {
   border: 1px solid #000000;
   color: var(--main-black-color);
 }
-.modal-card__wrapper .button-white:not(:first-child) {
-  margin-left: 15px;
+.modal-card__wrapper .button-white:not(:last-child) {
+  @media screen and (max-width: 1023px) {
+    margin-bottom: 10px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-right: 13px;
+  }
 }
 
-
-.modal-card__wrapper .button-orange {
-  margin: 0;
-}
-
-.modal-card__wrapper .button-orange:not(:first-child) {
-  margin-left: 15px;
+.modal-card__wrapper .button-orange:not(:last-child) {
+  @media screen and (max-width: 1023px) {
+    margin-bottom: 10px;
+  }
+  @media screen and (min-width: 768px) {
+    margin-right: 13px;
+  }
 }
 
 .modal-card__wrapper .button-orange:hover,
