--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -10,6 +10,9 @@
 }
 .pagination_list {
   display: flex;
+  @media screen and (max-width: 767px) {
+    width: 280px;
+  }
 }
 
 .pagination_list li {
