--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -6,6 +6,9 @@
     margin-left: -30px;
     margin-top: -30px;
   }
+  @media screen and (max-width: 1199px) {
+    justify-content: center;
+  }
 }
 
 .container_gallery {
@@ -22,11 +25,11 @@
       width: 280px;
     }
   }
+
   @media screen and (min-width: 768px) {
     margin-top: 30px;
     margin-left: 30px;
-    flex-basis: calc((100% - 2 * 30px) / 2);
-    width: 294px;
+    width: 293px;
   }
   @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 3 * 30px) / 3);
@@ -59,7 +62,7 @@
     width: 280px;
   }
   @media screen and (min-width: 768px) {
-    width: 294px;
+    width: 293px;
   }
   @media screen and (min-width: 1200px) {
     width: 274px;
