--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -51,12 +51,12 @@
   background-color: var(--background-accent);
   border: 1px solid var(--background-accent);
 
-  // &:hover,
-  // &:focus {
-  //   background-color: var(--background-accent);
-  //   border: 1px solid var(--background-accent);
-  //   color: var(--main-white-color);
-  // }
+  &:hover,
+  &:focus {
+    background-color: var(--background-accent);
+    border: 1px solid var(--background-accent);
+    color: var(--main-white-color);
+  }
 }
 
 .button-white {
@@ -65,12 +65,11 @@
   background-color: transparent;
   border: 1px solid var(--main-white-color);
 
-  // &:hover,
-  // &:focus,
-  // &:active {
-  //   background-color: var(--background-accent);
-  //   border: 1px solid var(--background-accent);
-  // }
+  &:hover,
+  &:focus {
+    background-color: var(--background-accent);
+    border: 1px solid var(--background-accent) !important;
+  }
 }
 
 .button-active {
