Update modat buttons

--- a/src/sass/components/_modal-content.scss
+++ b/src/sass/components/_modal-content.scss
@@ -103,7 +103,12 @@ div.modal.dark-theme {
   margin: 0;
   border: 1px solid #000000;
   color: var(--main-black-color);
+  &:hover,
+  &:focus {
+    color: var(--main-white-color);
+  }
 }
+
 .modal-card__wrapper .button-white:not(:last-child) {
   @media screen and (max-width: 1023px) {
     margin-bottom: 10px;
