кнопка удалить фильм + модалка на телефонах

--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -47,9 +47,9 @@
     border-radius: 2px;
 
     & .delete-btn {
-      border: 1px solid var(--background-accent);
       transform: scale(1.1);
       background-image: url(../images/icons/close-hover.svg);
+      background-color: #fff;
     }
   }
 }
