--- a/src/slider.css
+++ b/src/slider.css
@@ -58,6 +58,16 @@
   background-color: #857c73;
   border: 1px solid #857c73;
 }
+
+@media screen and (max-width: 767px) {
+  .glide__arrow {
+    position: absolute;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+  }
+}
 .glide__arrow:hover {
   color: #ff6b08;
 }
