--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -14,6 +14,17 @@
               Home</a></li>
           <li class="site-nav__item"> <a href="" class="site-nav__link library link">
               Library</a></li>
+          <li class="site-nav__item dropdown">
+            <a href="" class="site-nav__link library link ">
+            Genres</a> 
+            <ul id="genresDropdown" class="dropdown-content">
+            <li class = "genres-item"><a href="#home">28</a></li>
+            <li class = "genres-item"><a href="#home">12</a></li>
+            <li class = "genres-item"><a href="#home">16</a></li>
+            <li class = "genres-item"><a href="#home">35</a></li>
+            <li class = "genres-item"><a href="#home">14</a></li>            
+            </ul>                   
+          </li>
               <li class="site-nav__item">  <div class="toggle toggle--daynight">
     <input type="checkbox" id="toggle--daynight" class="toggle--checkbox theme-switch__toggle">
     <label class="toggle--btn" for="toggle--daynight"><span class="toggle--feature"></span></label>
