Update slider for mobile

--- a/src/slider.css
+++ b/src/slider.css
@@ -1,7 +1,12 @@
 .slider.container {
-  /* width: auto; */
   margin-top: 60px;
   padding: 0;
+}
+
+@media screen and (max-width: 767px) {
+  .slider.container {
+    width: auto;
+  }
 }
 
 .slider {
