Добавила поиск по жанру

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,11 +18,11 @@
             <a href="" class="site-nav__link library link ">
             Genres</a> 
             <ul id="genresDropdown" class="dropdown-content">
-            <li class = "genres-item"><a href="#home">28</a></li>
-            <li class = "genres-item"><a href="#home">12</a></li>
-            <li class = "genres-item"><a href="#home">16</a></li>
-            <li class = "genres-item"><a href="#home">35</a></li>
-            <li class = "genres-item"><a href="#home">14</a></li>            
+            <li class="genres-item"><a class="genres-link link" href="#home">Comedy</a></li>
+            <li class="genres-item"><a class="genres-link link" href="#home">Drama</a></li>
+            <li class="genres-item"><a class="genres-link link" href="#home">Thriller</a></li>
+            <li class="genres-item"><a class="genres-link link" href="#home">Western</a></li>
+            <li class="genres-item"><a class="genres-link link" href="#home">Horror</a></li>            
             </ul>                   
           </li>
               <li class="site-nav__item">  <div class="toggle toggle--daynight">
