--- a/src/sass/components/_genres-list.scss
+++ b/src/sass/components/_genres-list.scss
@@ -7,10 +7,37 @@
 .dropdown-content {
     display: none;
     position: absolute;
-    overflow: auto;
     z-index: 1;
+    top: 20px;    
 }
+
 
 .show {
     display: block;
+    opacity: 1;
+    transition: opacity 1250ms linear;
 }
+
+.genres-item{
+    line-height: 1.3;
+    font-size: 12px;
+    font-weight: 400;
+    font-family: var(--main-font);
+    color: var(--main-white-color);
+    padding-top: 5px;
+    padding-bottom: 5px;
+    
+}
+
+.genres-link:after {
+    display:block;
+    content: '';
+    border-bottom: solid 3px #ff6b08;  
+    transform: scaleX(0);  
+    transition: transform 250ms ease-in-out;
+  }
+
+.genres-link:hover:after { 
+    transform: scaleX(1); 
+}
+
