--- a/src/templates/genres.hbs
+++ b/src/templates/genres.hbs
@@ -1,6 +1,6 @@
-{{!-- <li class='genres-item'>
+<li class='genres-item'>
   <a class='link' href='#'>
     {{name}}
   </a>
-  </li> --}}
+  </li>
 
