--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
           </svg>
           <span class="logo__name">Filmoteka</span>
         </a>
-        <ul class="site-nav">
+        <ul class="site-nav topmenu">
           <li class="site-nav__item">
               <a href="" class="site-nav__link site-nav__link--current-page home link">
               Home</a></li>
@@ -17,7 +17,7 @@
           <li class="site-nav__item dropdown">
             <a href="" class="site-nav__link library link ">
             Genres</a> 
-            <ul id="genresDropdown" class="dropdown-content">
+            <ul id="genresDropdown" class="dropdown-content submenu">
             <li class="genres-item"><a class="genres-link link" href="#home">Comedy</a></li>
             <li class="genres-item"><a class="genres-link link" href="#home">Drama</a></li>
             <li class="genres-item"><a class="genres-link link" href="#home">Thriller</a></li>
