Update (add mentors comments)

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,4 +1,5 @@
 <section class="slider container">
+  <h2 class="visually-hidden">Slider</h2>
   <div class="glide__track" data-glide-el="track">
     <ul class="glide__slides slider-js">
       <li class="glide__slide"></li>
