--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -96,15 +96,18 @@
   }
 }
 
+.site-nav__link {
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
 .site-nav__link--current-page {
   position: relative;
   &::after {
     content: '';
-
     position: absolute;
-    bottom: -3px;
-    left: 0;
-
+    bottom: 2px;
+    left: 1px;
     height: 3px;
     width: 100%;
     background-color: var(--background-accent);
