--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,7 +6,7 @@
           <svg class="logo__icon" width="24" height="24">
             <use href="./images/icons/sprite.svg#film"></use>
           </svg>
-          <span class="logo__name">Filmoteka</span>
+          <h1 class="logo__name">Filmoteka</h1>
         </a>
         <ul class="site-nav">
           <li class="site-nav__item">
