--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,9 +11,8 @@
         <ul class="site-nav">
           <li class="site-nav__item">
               <a href="" class="site-nav__link site-nav__link--current-page home link">
-              Home</a></li>
-          <li class="site-nav__item"> <a href="" class="site-nav__link library link">
-              Library</a></li>
+              HOME</a></li>
+          <li class="site-nav__item"> <a href="" class="site-nav__link library link">MY LIBRARY</a></li>
               <li class="site-nav__item">  <div class="toggle toggle--daynight">
     <input type="checkbox" id="toggle--daynight" class="toggle--checkbox theme-switch__toggle">
     <label class="toggle--btn" for="toggle--daynight"><span class="toggle--feature"></span></label>
