--- a/src/templates/player.hbs
+++ b/src/templates/player.hbs
@@ -1,8 +1,3 @@
 <div class='modal__video'>
-  <iframe
-    class='modal__frame'
-    src='https://www.youtube.com/embed/{{this}}'
-    frameborder='0'
-    allowfullscreen
-  ></iframe>
+<div id="ytplayer"></div>
 </div>
