--- a/src/sass/components/_genres-list.scss
+++ b/src/sass/components/_genres-list.scss
@@ -21,17 +21,6 @@
     color: #fff;
  }
  
- @media(max-width: 599px) {
-    .topmenu>li>a {
-       padding: 15px 20px;
-    }
-    .submenu li a {
-       padding: 10px 20px;
-       margin: 0 20px;
-    }
- }
- 
- @media(min-width: 600px) {
     .topmenu {
        width: 100%;
        display: flex;
@@ -41,30 +30,41 @@
        position: relative;
     }
 
-    .topmenu>li:last-child:after {
-       background: none;
-       box-shadow: none;
-    }
-
     .submenu {
        position: absolute;
        left: 50%;
        top: 150%;
-       margin-left: -22px;
+       margin-left: -35px;
        z-index: 5;
        visibility: hidden;
        opacity: 0;
        transform: scale(.8);
        transition: .4s ease-in-out;
+       background-color: #000000cf;
+       border-radius: 4px;
+       padding: 10px;
+    //border: 1px solid #ff6b01;
     }
-    .topmenu>li:hover .submenu {
-       visibility: visible;
-       opacity: 1;
-       transform: scale(1);
-    }
+
+    .show {
+        visibility: visible;
+        opacity: 1;
+        transform: scale(1);
+     }
     .submenu li a {
         text-align: center;
         padding: 7px 0;
     }
- }
+    .hide_submenu{
+        display: none;
+    }
+
+    h3 {
+        color: #fff;
+        display: block;
+        font-size: 25px;
+        font-weight: 400;
+        text-align: center;
+        text-transform: uppercase;
+    }
 
