--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -4,7 +4,7 @@
 
 .navigation {
   display: flex;
-  align-items: baseline;
+  align-items: center;
   justify-content: space-between;
   margin-bottom: 45px;
 }
@@ -89,13 +89,22 @@
   align-items: center;
   @include Roboto(14, 12, 500);
   color: var(--main-white-color);
-}
-.site-nav__item {
-  &:not(:last-child) {
-    margin-right: 39px;
-  }
-}
+//     margin-right: 39px;
 
+}
+// .site-nav__item {
+//   &:not(:last-child) {
+//     margin-right: 39px;
+//   }
+// }
+
+.site-nav__item {  
+    margin-right: 20px;  
+
+    @media screen and (min-width: 768px) {
+      margin-right: 39px; 
+    }
+}
 .site-nav__link--current-page {
   position: relative;
   &::after {
