--- a/src/sass/components/_genres-list.scss
+++ b/src/sass/components/_genres-list.scss
@@ -65,6 +65,7 @@
         font-size: 25px;
         font-weight: 400;
         text-align: center;
-        text-transform: uppercase;
+       // text-transform: uppercase;
+        font-family: 'Lato', sans-serif;
     }
 
