resolves dropdown closing issue

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,7 +15,7 @@
           <li class="site-nav__item"> <a href="" class="site-nav__link library link">
               Library</a></li>
           <li class="site-nav__item dropdown">
-            <a href="" class="site-nav__link library link ">
+            <a href="" class="site-nav__link dropdown__menu link ">
             Genres</a> 
             <ul id="genresDropdown" class="dropdown-content submenu">
             <li class="genres-item"><a class="genres-link link" href="#home">Comedy</a></li>
