--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,18 +11,18 @@
         <ul class="site-nav topmenu">
           <li class="site-nav__item">
               <a href="" class="site-nav__link site-nav__link--current-page home link">
-              Home</a></li>
+              HOME</a></li>
           <li class="site-nav__item"> <a href="" class="site-nav__link library link">
-              Library</a></li>
+              MY LIBRARY</a></li>
           <li class="site-nav__item dropdown">
             <a href="" class="site-nav__link dropdown__menu link ">
-            Genres</a> 
+            GENRES</a> 
             <ul id="genresDropdown" class="dropdown-content submenu">
-            <li class="genres-item"><a class="genres-link link" href="#home">Comedy</a></li>
-            <li class="genres-item"><a class="genres-link link" href="#home">Drama</a></li>
-            <li class="genres-item"><a class="genres-link link" href="#home">Thriller</a></li>
-            <li class="genres-item"><a class="genres-link link" href="#home">Western</a></li>
-            <li class="genres-item"><a class="genres-link link" href="#home">Horror</a></li>            
+            <li class="genres-item"><a class="genres-link link" href="#home">COMEDY</a></li>
+            <li class="genres-item"><a class="genres-link link" href="#home">DRAMA</a></li>
+            <li class="genres-item"><a class="genres-link link" href="#home">THRILLER</a></li>
+            <li class="genres-item"><a class="genres-link link" href="#home">WESTERN</a></li>
+            <li class="genres-item"><a class="genres-link link" href="#home">HORROR</a></li>            
             </ul>                   
           </li>
         </ul>
