--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,23 @@
-<p class="header">header</p>
+<header class="header">
+  <div class="header-nav container">
+    <nav class="main-nav">
+      <a class="logo link" href="./index.html">Filmoteka</a>
+      <!--Навигация-->
+      <ul class="site-nav list">
+        <li class="site-nav__item">
+          <a class="site-nav__link link current" href="./index.html">Home</a>
+        </li>
+        <li class="site-nav__item">
+          <a class="site-nav__link link" href="">My Library</a>
+        </li>
+      </ul>
+    </nav>
+    </ul>
+  </div>
+  <div class="header-form">
+<form class="form form-header">
+    <input type="text" class="form-control" name="search" placeholder="Поиск фильмов"   />
+    <svg class="search-icon" width="20" height="20"></svg>
+</form>
+  </div>
+</header>
