--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -4,9 +4,7 @@ $pageFontSizeMain: 12px;
   align-items: center;
   justify-content: center;
   gap: 2px;
-
-  height: 28px;
-  margin: 14px 0 12px;
+  margin-top: 40px;
   line-height: normal;
   text-align: center;
   font-size: 0;
