--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,4 @@
-<p class="footer">footer</p>
+<footer class="footer">
+<p class="footer__text">©  2020 | All Rights Reserved | Developed with 
+    <span class="heart"></span>by <span class="footer__text__decoration">GoIT Students</span></p>
+  </footer>
