--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,24 +1,26 @@
 <header class="header">
   <div class="header-nav container">
     <nav class="main-nav">
-      <a class="logo link" href="./index.html"><svg class="logo__icon icon" width="32" height="32"><use href="./images/icons/icons.svg#icon-film"></use></svg>Filmoteka</a>
+      <a class="logo link" href="./index.html"><svg class="logo__icon icon" width="24" height="24"><use href="./images/icons/icons.svg#icon-film"></use></svg>Filmoteka</a>
       <!--Навигация-->
       <ul class="site-nav list">
         <li class="site-nav__item">
-          <a class="site-nav__link link current" href="./index.html">Home</a>
+          <a class="site-nav__link link link__current" href="./index.html">Home</a>
         </li>
         <li class="site-nav__item">
           <a class="site-nav__link link" href="">My Library</a>
         </li>
       </ul>
-      
     </nav>
     </ul>
-  </div>
   <div class="header-form">
-<form class="form form-header">
-    <input type="text" class="form-control" name="search" placeholder="Поиск фильмов"   />
+<form class="form form-header js-search-form">
+  <div class="form-field">
+    <input type="text" class="form-input" name="film-search" placeholder="Поиск фильмов"/>
+    
     <button class="form-btn btn" type="button"><svg class="search__icon icon" width="12" height="12"><use href="./images/icons/icons.svg#icon-search"></use></svg></button>
-</form>
+</div>
+  </form>
   </div>
+    </div>
 </header>
