--- a/src/sass/base/_header.scss
+++ b/src/sass/base/_header.scss
@@ -1,10 +1,9 @@
+//container
 .container {
-  max-width: 320px;
-  padding-left: 15px;
-  padding-right: 15px;
+  width: 100%;
 
   @media screen and (min-width: 320px) {
-    width: 100%;
+    min-width: 320px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -17,42 +16,126 @@
     max-width: 1024px;
   }
 }
-a {
+
+//background for header
+
+.header {
+  padding: 40px 0 97px;
+  background-image: url('../images/header/background/mobile/mobile-bg1x.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  @media screen and (min-width: 768px) {
+    background-image: url('../images/header/background/tablet/tablet-bg1x.jpg');
+  }
+  @media screen and (min-width: 1024px) {
+    background-image: url('../images/header/background/desktop/desktop-bg1x.jpg');
+  }
+
+  @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+    background-image: url('../images/header/background/mobile/mobile-bg2x.jpg');
+    @media screen and (min-width: 768px) {
+      background-image: url('../images/header/background/tablet/tablet-bg2x.jpg');
+    }
+    @media screen and (min-width: 1024px) {
+      background-image: url('../images/header/background/desktop/desktop-bg2x.jpg');
+    }
+  }
+}
+
+//logo-link
+.link {
   text-decoration: none;
   color: var(--second-color);
 }
 
-.header {
-  background-image: url('../images/header/background/desktop/desktop-bg1x.jpg');
-}
-.search__icon {
-  fill: var(--second-color);
-}
-.form-control {
-  position: relative;
-}
-.form-btn {
-  position: absolute;
-  background-color: var(--second-color);
-  border: none;
-}
-.header-form {
+.logo {
+  display: flex;
+  align-items: center;
   text-align: center;
-  margin-bottom: 97px;
+
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 1.16;
 }
+
+.logo__icon {
+  margin-right: 10px;
+}
+
+.link__current::after {
+  position: absolute;
+  display: block;
+  content: '';
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--accent-color);
+  opacity: 1;
+}
+//site navigation
 .main-nav {
   display: flex;
   text-align: center;
+  margin-bottom: 40px;
 }
 
 .site-nav {
-  list-style: none;
   display: flex;
+  align-items: center;
+  text-align: center;
 
-  flex-wrap: nowrap;
-  justify-content: center;
+  padding: 0;
   margin-left: auto;
+
+  font-family: Roboto;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.16;
+
+  list-style: none;
+  text-transform: uppercase;
 }
+
+.site-nav__item {
+  text-transform: uppercase;
+  position: relative;
+}
+
 .site-nav__item:first-child {
   margin-right: 40px;
+}
+
+// form-style
+
+.header-form {
+  text-align: center;
+  font-family: Roboto;
+  font-size: 14px;
+  line-height: 1.16;
+
+  color: var(--second-color);
+}
+
+.form-input {
+  width: 336px;
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid var(--second-color);
+  outline: none;
+  color: var(--second-color);
+}
+
+.form-input::placeholder {
+  color: var(--second-color);
+}
+
+.search__icon {
+  fill: var(--second-color);
+}
+
+.form-btn {
+  background: transparent;
+  border: none;
 }
