--- a/src/sass/base/_header.scss
+++ b/src/sass/base/_header.scss
@@ -76,15 +76,17 @@
 }
 //site navigation
 .main-nav {
-  display: flex;
   text-align: center;
-  margin-bottom: 40px;
+  @media screen and (min-width: 320px) {
+    display: flex;
+
+    margin-bottom: 40px;
+  }
 }
 
 .site-nav {
   display: flex;
   align-items: center;
-  text-align: center;
 
   padding: 0;
   margin-left: auto;
@@ -119,12 +121,15 @@
 }
 
 .form-input {
-  width: 336px;
   background: transparent;
   border: none;
   border-bottom: 1px solid var(--second-color);
   outline: none;
   color: var(--second-color);
+
+  @media screen and (min-width: 320px) {
+    width: 336px;
+  }
 }
 
 .form-input::placeholder {
