delete button in input

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header-nav container">
     <nav class="main-nav">
-      <a class="logo link" href="./index.html"><svg class="logo__icon icon" width="24" height="24"><use href="./images/icons/icons.svg#icon-film"></use></svg>Filmoteka</a>
+      <a class="logo link" href="./index.html"><svg class="logo__icon icon" width="24" height="24"><use href="./images/icons/icons.svg#icon-film"></use></svg><span class='title'>Filmoteka</span></a>
       <!--Навигация-->
       <ul class="site-nav list">
         <li class="site-nav__item">
@@ -14,13 +14,9 @@
     </nav>
     </ul>
   <div class="header-form">
-<form class="form form-header js-search-form">
-  <div class="form-field">
-    <input type="text" class="form-input" name="film-search" placeholder="Поиск фильмов"/>
-    
-    <button class="form-btn btn" type="button"><svg class="search__icon icon" width="12" height="12"><use href="./images/icons/icons.svg#icon-search"></use></svg></button>
+    <input type="text" class="form-input" name="film-search" placeholder="Поиск фильмов">
+    <svg class="search__icon icon" width="12" height="12"><use href="./images/icons/icons.svg#icon-search"></use></svg>
+    <p class="text-error">Search result not successful. Enter the correct movie name and </p>
 </div>
-  </form>
   </div>
-    </div>
 </header>
