--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -4,6 +4,7 @@
   --accent-color: #ff6b01;
   --footer-color: #545454;
   --modal-color: #8c8c8c;
+  --error-color: #ff001b;
 
   --header-background: rgba(0, 0, 0, 0.56);
   --footer-background: #f7f7f7;
