--- a/src/sass/base/_header.scss
+++ b/src/sass/base/_header.scss
@@ -1,26 +1,27 @@
 //container
 .container {
   width: 100%;
-
+  padding: 0 20px;
   @media screen and (min-width: 320px) {
-    min-width: 320px;
+    width: 320px;
     margin-left: auto;
     margin-right: auto;
   }
 
   @media screen and (min-width: 768px) {
-    max-width: 768px;
+    width: 768px;
   }
 
   @media screen and (min-width: 1024px) {
-    max-width: 1024px;
+    width: 1024px;
   }
 }
 
 //background for header
 
 .header {
-  padding: 40px 0 97px;
+  padding: 40px;
+  min-height: 230px;
   background-image: url('../images/header/background/mobile/mobile-bg1x.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -52,7 +53,6 @@
 .logo {
   display: flex;
   align-items: center;
-  text-align: center;
 
   font-family: Roboto;
   font-weight: 500;
@@ -77,13 +77,16 @@
 //site navigation
 .main-nav {
   text-align: center;
+  display: flex;
   @media screen and (min-width: 320px) {
-    display: flex;
-
     margin-bottom: 40px;
   }
 }
-
+.title {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+}
 .site-nav {
   display: flex;
   align-items: center;
@@ -112,12 +115,18 @@
 // form-style
 
 .header-form {
-  text-align: center;
+  position: relative;
+  display: block;
+  text-align: start;
   font-family: Roboto;
   font-size: 14px;
   line-height: 1.16;
 
   color: var(--second-color);
+
+  @media screen and (min-width: 768px) {
+    text-align: center;
+  }
 }
 
 .form-input {
@@ -126,8 +135,10 @@
   border-bottom: 1px solid var(--second-color);
   outline: none;
   color: var(--second-color);
+  width: 100%;
+  margin-bottom: 22px;
 
-  @media screen and (min-width: 320px) {
+  @media screen and (min-width: 768px) {
     width: 336px;
   }
 }
@@ -137,10 +148,17 @@
 }
 
 .search__icon {
+  position: absolute;
+  top: 0;
+  transform: translateX(-20px) translateY(25%);
   fill: var(--second-color);
 }
 
 .form-btn {
   background: transparent;
   border: none;
+}
+.text-error {
+  margin: 0;
+  color: var(--error-color);
 }
