--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,2 +1,8 @@
 <p class="main">main</p>
-<div id="pagination" class="tui-pagination tui-pagination--is-hidden"></div>
+<section class="gallery">
+    <div class="container">
+        <ul class="gallery__container card-set"></ul>
+        <div id="pagination" class="tui-pagination tui-pagination--is-hidden"></div>
+    </div>
+</section>
+
