add id and class for site-nav

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,10 +5,10 @@
       <!--Навигация-->
       <ul class="site-nav list">
         <li class="site-nav__item">
-          <a class="site-nav__link link link__current" href="./index.html">Home</a>
+          <a id="home" class="site-nav__link link link__current" href="#">Home</a>
         </li>
         <li class="site-nav__item">
-          <a class="site-nav__link link" href="">My Library</a>
+          <a id="library" class="site-nav__link link" href="#">My Library</a>
         </li>
       </ul>
     </nav>
@@ -17,6 +17,10 @@
     <input type="text" class="form-input" name="film-search" placeholder="Поиск фильмов">
     <svg class="search__icon icon" width="12" height="12"><use href="./images/icons/icons.svg#icon-search"></use></svg>
     <p class="text-error">Search result not successful. Enter the correct movie name and </p>
+</div>
+<div class="buttons-box buttons-none">
+    <button type="button" class="btn-active btn">Watched</button>
+    <button type="button" class="btn-disable btn">queue</button>
 </div>
   </div>
 </header>
